--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-pyside6 = "^6.5.0"
 keyboard = "^0.13.5"
+pytest = "^7.3.1"
+sqlalchemy = "^2.0.15"
+pyside6 = "^6.5.0"
+pyside6-addons = "^6.5.0"
+pyside6-essentials = "^6.5.0"
 
 
 [build-system]
