--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ madqt = "*"
 pyside6 = "*"
 pyside6-addons = "*"
 pyside6-essentials = "*"
+shiboken6 = "*"
 
 [dev-packages]
 sphinx = "7.0.1"
@@ -24,3 +25,4 @@ sqlalchemy = "^2.0.15"
 pyside6 = "^6.5.0"
 pyside6-addons = "^6.5.0"
 pyside6-essentials = "^6.5.0"
+shiboken6 = "^6.5.0"
