--- a/Pipfile
+++ b/Pipfile
@@ -8,13 +8,15 @@ pyside6 = "==6.5.1.1"
 pyside6-addons = "==6.5.1.1"
 pyside6-essentials = "==6.5.1.1"
 shiboken6 = "==6.5.1.1"
-sqlalchemy = "==2.0.16"
+sqlalchemy = "*"
 keyboard = "==0.13.5"
-nuitka = "==1.6.3"
-pyinstaller = "==5.12.0"
-pytest = "==7.3.2"
+nuitka = "==1.7.2"
+pyinstaller = "*"
+pytest = "*"
 altgraph = "==0.17.3"
 jinja2 = "*"
+asyncio = "*"
+aiosqlite = "*"
 
 [dev-packages]
 sphinx = "7.0.1"
