Remove configuration file, refactor hotkey methods, and restructure testing
Following changes were implemented in this commit:
1) The configuration file ExileCraft/docs/conf.py was deleted and a version was created in docs/ with modifications to use pathlib and an absolute path. This was done to align the codebase with standard project structures and make it easier to access.
2) Several hotkey related methods and classes were restructured for better documentation, performance, and code readability. Parameter and return type annotations were added to improve code navigation and auto-suggestion.
3) Test files were also restructured to align with the Python convention of mirroring the source directory. Unnecessary imports were removed and missing libraries were added. Tests are no longer part of the ExileCraft package itself.
4) Additional changes were GUI design improvements, application rebranding to ExileCraft, and addition of standard Python project management and configurations files (.gitignore, pyproject.toml).

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ __pycache__/
 /.idea/workspace.xml
 /tests/.pytest_cache/README.md
 /tests/.pytest_cache/.gitignore
+/.pytest_cache
+/.github
+/.github/workflows
+/.github/*
