--- a/ExileCraft/settings.json
+++ b/ExileCraft/settings.json
@@ -1,7 +1,7 @@
 {
   "app_name": "ExileCraft",
   "version": "v1.0.0",
-  "copyright": "By: Jon Duea",
+  "copyright": "ExileCraft 2023 ©",
   "year": 2023,
   "theme_name": "default",
   "custom_title_bar": true,
